checkin 4th version

--- a/origin/manuscripts/tmi.tex
+++ b/origin/manuscripts/tmi.tex
@@ -9,6 +9,7 @@
 \usepackage{siunitx}
 \usepackage{textcomp}
 
+\usepackage{color,soul}
 \usepackage{xcolor}
 
 \makeatletter
@@ -461,57 +462,58 @@
 	\section{Methods}
 
 	\newcolumntype{a}{p{0.30\textwidth}}
-	\newcolumntype{b}{p{0.12\textwidth}}
+	\newcolumntype{b}{p{0.22\textwidth}}
 	\begin{table*}
 		\centering
 		\caption{iEPI with or without navigators acquisition protocols}
 		\label{TAB:ACQ}
-		\begin{tabular}{a | b b b b}
+		\begin{tabular}{a | b b}
 			\toprule
-			\textbf{Protocol} & \textbf{\#1} & \textbf{\#2} & \textbf{\#3} & \textbf{\#4}\\
+			\textbf{Protocol} & \textbf{\#1} \;\;\; / \;\;\; \textbf{\#2} & \textbf{\#3} \\
 			\hline
-			Diffusion mode & \multicolumn{4}{c}{MDDW} \\
-			Diffusion scheme & \multicolumn{4}{c}{monopolar} \\
-			Diffusion direction & $20$ & $114$ & \multicolumn{2}{c}{$20$} \\
-			$b$-value (\si{s/mm^2}) & $1000$ & 3-shell & \multicolumn{2}{c}{$1000$} \\
-			$b_0$ & $1$ & $12$ & \multicolumn{2}{c}{$1$} \\
-			FOV (\si{\square\mm}) & \multicolumn{4}{c}{$200$} \\
-			Matrix size & \multicolumn{2}{c}{$200 \times 200$} & \multicolumn{2}{c}{$286 \times 286$} \\
-			In-plane resolution (\si{\square\mm}) & \multicolumn{2}{c}{$1.0 \times 1.0$} & \multicolumn{2}{c}{$0.7 \times 0.7$} \\
-			Slice thickness (\si{\mm}) & \multicolumn{2}{c}{$1.0$} & \multicolumn{2}{c}{$0.7$} \\
-			Slices & $141$ & $114$ & \multicolumn{2}{c}{$176$} \\
-			Navigator & \multicolumn{2}{c}{No} & Yes & No \\
-			Shots & $4$ & 2 & \multicolumn{2}{c}{$3$} \\
-			TR (\si{\ms}) & $7700$ & $4900$ & $15000$ & $8900$ \\
-			TE (\si{\ms}) & $67$ & $70$ & $58/98.3$ & $58$ \\
-			ESP (\si{\ms}) & \multicolumn{2}{c}{$1.02$} & \multicolumn{2}{c}{$1.17$} \\
-			Bandwidth (\si{Hz/Pixel}) & \multicolumn{2}{c}{$1086$} & \multicolumn{2}{c}{$972$} \\
-			Partial Fourier & \multicolumn{2}{c}{$6/8$} & \multicolumn{2}{c}{$5/8$} \\
-			Acceleration & $1 \times 3$ & $3 \times 3$ & \multicolumn{2}{c}{$2 \times 2$} \\
-			Acquisition (\si{\minute}) & $10:42$ & $20:55$ & $16:27$ & $9:57$ \\
+			Diffusion mode & \multicolumn{2}{c}{MDDW} \\
+			Diffusion scheme & \multicolumn{2}{c}{monopolar} \\
+			Diffusion direction & $20$ & $114$ \\
+			$b$-value (\si{s/mm^2}) & $1000$ & 3-shell \\
+			$b_0$ & $1$ & $12$ \\
+			FOV (\si{\square\mm}) & \multicolumn{2}{c}{$200$} \\
+			Matrix size & $286 \times 286$ & $200 \times 200$ \\
+			In-plane resolution (\si{\square\mm}) & $0.7 \times 0.7$ & $1.0 \times 1.0$ \\
+			Slice thickness (\si{\mm}) & $0.7$ & $1.0$ \\
+			Slices & $176$ & $114$ \\
+			Navigator & Yes \;\;\; / \;\;\; No & No \\
+			Shots & $3$ & $2$ \\
+			TR (\si{\ms}) & $15000$ \;\;\; / \;\;\; $8900$ & $4900$ \\
+			TE (\si{\ms}) & $58/98.3$ \;\;\; / \;\;\; $58$ & $70$ \\
+			ESP (\si{\ms}) & $1.17$ & $1.02$ \\
+			Bandwidth (\si{Hz/Pixel}) & $972$ & $1086$ \\
+			Partial Fourier & $5/8$ & $6/8$ \\
+			Acceleration & $2 \times 2$ & $3 \times 3$ \\
+			Acquisition (\si{\minute}) & $16:27$ \;\;\; / \;\;\; $9:57$  & $20:55$ \\
 			\bottomrule
 		\end{tabular}
 	\end{table*}
 
 	\subsection{Data Acquisition}
 
-	\cref{TAB:ACQ} lists four acquisition protocols implemented on
+	\cref{TAB:ACQ} lists three acquisition protocols implemented on
 	a clinical \SI{7}{\tesla} MR system
 	(MAGNETOM Terra, Siemens Healthineers, Erlangen, Germany)
 	with a 32-channel head coil (Nova Medical, Wilmington, MA, USA)
 	and the XR-gradient system
 	(maximum gradient strength \SI{80}{\milli\tesla/\meter} and
 	a peak slew rate \SI{200}{\tesla/\meter/\second}).
-	The first protocol employed in-plane fully-sampled four-shot EPI
-	and thus supplied ground truth data for the validation
-	of our proposed methods.
-	The second protocol employed 3-shell diffusion acquisition
-	with $b$-values spanning $1000$, $2000$, and $3000$~\si{s/mm^2}.
-	The last two protocols implemented mesoscale \SI{0.7}{mm}
-	isotropic resolution based on NAViEPI or iEPI
-	with both in-plane and slice acceleration as 2,
-	supplying a total acquisition time of $16:27$ and $9:57$ minutes, respectively.
-	Three young healthy volunteers with written informed consent
+	Protocols \#1 and \#2 realized mesoscale DWI with \SI{0.7}{mm}
+	isotropic resolution. Two-fold acceleration was employed 
+	in both in-plane and slice directions. 
+	Every DWI was acquired by three shots in an interleaved manner, 
+	which resulted in $6 \times 2$-fold acceleration per shot. 
+	Noteworthy, the total scan time can be reduced to about 10~minutes 
+	(Protocol \#2) when switching off navigator acquisition.
+	\hl{Protocol \#3} realized three-shell diffusion acquisition 
+	with $b$-values spanning $1000$, $2000$, and $3000$~\si{s/mm^2} 
+	at \SI{1.0}{mm} isotropic resolution.
+	Four young healthy volunteers with written informed consent
 	approved by the local ethics committee
 	participated in this study.
 
@@ -665,9 +667,7 @@
 
 	\subsection{Comparison of Regularization Techniques}
 
-	In this work, using the 4-shot fully-sampled iEPI \cite{butts_1993_iepi} data
-	acquired by Protocol \#1 from \cref{TAB:ACQ},
-	we compared the reconstruction performance
+	This work compared the reconstruction performance
 	of three different regularization techniques,
 	Tikhonov $\ell^2$ regularization (as used in MUSE),
 	LLR regularization,
@@ -677,9 +677,10 @@
 	effectively solving each DWI reconstruction independently.
 	In contrast, all other regularized reconstructions
 	fall into the joint reconstruction regime.
-	This method jointly reconstructs all DWIs
+	They jointly reconstruct all DWIs
 	and imposes regularization terms that explore spatial-diffusion redundancy.
-	For example, LLR enforces low rankness of local spatial-diffusion matrices from DWIs,
+	For example, LLR enforces low rankness of 
+	local spatial-diffusion matrices from DWIs,
 	whereas ZSSSL learns a ResNet regularization function
 	based on spatial-diffusion convolution kernels
 	while enforcing data consistency during the unrolled training process.
@@ -703,7 +704,7 @@
 
 	\subsection{ZSSSL Model Generalization} \label{SEC:ZSSSL_GEN}
 
-	We evaluated the generalization of the ZSSSL model in two aspects.
+	\hl{We evaluated the generalization of the ZSSSL model in two aspects.}
 	First, using the 4-shot fully-sampled data acquired by
 	Protocol \#1 \cref{TAB:ACQ}, we trained ZSSSL with all 4 shots
 	and then tested the trained model with retrospectively undersampled 2-shot data.
@@ -753,125 +754,45 @@
 	% ============================== %
 	\section{Results}
 
-	\subsection{Comparison of Regularization Techniques}
+	\subsection{Retrospectively Self-Gated ZSSSL}
 
 	\begin{figure*}
 		\begin{minipage}[c]{0.75\textwidth}
 			\includegraphics[width=\textwidth]{../figures/fig2.png}
 		\end{minipage}\hfill
 		\begin{minipage}[c]{0.23\textwidth}
-			\caption{\textbf{(A)} Comparison of different regularization functions
-				on \SI{1.0}{mm} isotropic resolution 4-shot fully-sampled iEPI
-				(Protocol \#1 in \cref{TAB:ACQ})) 6
-				DWI reconstruction:
-				(1st column) MUSE with Tikhonov regularization,
-				joint DWI reconstruction with
-				(2nd column) LLR regularization,
-				(3rd column) ZSSSL with ResNet.
-				DWIs from the 2nd and the 18th diffusion-encoding direction were shown.
-				\textbf{(B)} Comparison of the above regularization functions
-				on \SI{1.0}{mm} isotropic resolution
-				retrospectively 2-shot undersampled iEPI DWI reconstruction.
-				Retrospective undersampling induced more noise in the MUSE reconstruction.
-				Both LLR and ZSSSL demonstrated superior noise reduction.
-				ZSSSL showed sharper and clearer structural delineation
-				in both reconstructions.}
-				\label{FIG:REGU}
+			\caption{Comparison of (top) LLR regularized and (bottom) ZSSSL 
+				reconstruction on 0.7~mm isotropic resolution DWI 
+				acquired by Protocol \#1
+				with shot phase estimated from 
+				(left) navigators and (middle) imaging echoes, respectively.
+				Zoomed views of the yellow boxes from the self-gated reconstruction 
+				are displayed in the right column.
+				The use of navigators prolongs the total scan time, 
+				and thus increases the sensitivity to motion, 
+				as shown in the single-direction DWI reconstructed 
+				with navigated shot phase.
+				The retrospectively self-gated reconstruction discards navigators, 
+				and renders sharper DWI. Compared to LLR, ZSSSL is advantageous 
+				in resolving clearer tissue boundaries in DWI, 
+				as indicated by red arrows.}
+				\label{FIG:MOTION_RETRO_TRA}
 		\end{minipage}
 	\end{figure*}
-
-	\cref{FIG:REGU} displays the regularized reconstruction results
-	using both the 4-shot fully-sampled iEPI data and
-	the retrospectively 2-shot undersampled iEPI data.
-	Firstly, compared to MUSE, all other regularized joint reconstructions (LLR and ZSSSL)
-	demonstrated denoising capabilities in the case of 4-shot fully-sampled iEPI.
-	Secondly, when the 4-shot iEPI data was retrospectively undersampled to 2 shots,
-	the undersampling factor became $4 \times 3$
-	(4-fold in-plane undersampling and 3-fold slice undersampling).
-	As expected, the MUSE reconstruction showed increased noise.
-	In contrast, both LLR and ZSSSL reconstructions showed strong denoising performance.
-	ZSSSL, in particular, provided sharper and clearer delineation
-	of brain tissues compared to LLR.
-	This may attribute to the fact that the same LLR regularization strength was used
-	for both the 4-shot and the 2-shot reconstructions.
-	While this empirically chosen regularization strength was optimal for the 4-shot data,
-	it resulted in slightly blurring artifacts for the 2-shot data.
-	ZSSSL, on the contrary, learned the regularization strength
-	($\lambda$ in \cref{EQU:INV}) during training,
-	eliminating the need for empirical selection.
-	Moreover, note that the LLR reconstruction took about 40 minutes for the data,
-	whereas the training of ZSSSL required about 3 hours,
-	with inference taking only 1 minute.
-
-
-	\subsection{DWI at $b$-Value of $3000$~\si{s/mm^2}}
-
-	\begin{figure*}
-		\centering
-		\includegraphics[width=\textwidth]{../figures/fig3.png}
-		\caption{Reconstruction results of 3-shell \SI{1.0}{mm} isotropic resolution
-		DWI with $3 \times 3$ acceleration: (left) LLR and (right) ZSSSL.
-		The images are shown in three orthogonal planes for
-		one diffusion-encoding direction at the $b$-values of
-		(top) 1000 and (bottom) \SI{3000}{s/mm^2}, respectively.}
-		\label{FIG:B3000}
-	\end{figure*}
-
-	\begin{figure}
-		\centering
-		\includegraphics[width=\columnwidth]{../figures/fig4.png}
-		\caption{Convergence analysis along the ADMM unrolling training and validation epochs
-			for the ZSSSL results in \cref{FIG:B3000}.
-			Displayed curves are (red solid) the training loss,
-			(red dashed) the validation loss,
-			and (blue solid) the learned regularization strength $\lambda$, respectively.}
-		\label{FIG:CONVERGENCE}
-	\end{figure}
-
-	\cref{FIG:B3000} compares the LLR and ZSSSL reconstruction results
-	of the 3-shell \SI{1.0}{mm} isotropic resolution DWI,
-	as acquired by Protocol \#2 in \cref{TAB:ACQ}.
-	Diffusion-weighted images at the $b$-value of \SI{3000}{s/mm^2} supplied
-	stronger diffusion weighting as compared to lower $b$-values,
-	but this came at th cost of increased noise and blurring.
-	The proposed self-gated ZSSSL was advantageous in
-	regaining signal-to-noise ratio (SNR) and
-	improving structural continuity and sharpness in all orientations.
-
-	\cref{FIG:CONVERGENCE} displays the training and validation loss
-	as well as the learned regularization strength along epochs.
-	It can be seen that 100 epochs were sufficient for
-	the convergence of ADMM unrolling.
-	In addition, the regularization strength converged to the value of 0.02.
-
-
-
-	\subsection{Retrospectively Self-Gated ZSSSL}
-
-	\begin{figure*}
-		\centering
-		\includegraphics[width=\textwidth]{../figures/fig5.png}
-		\caption{\SI{0.7}{\milli\meter} isotropic resolution DWI reconstruction results
-			based on the NAViEPI data acquired with Protocol \#3 in \cref{TAB:ACQ}.
-			(Left) LLR regularized reconstruction with shot phase estimated from navigators.
-			(Right) ZSSSL reconstruction with self-gated shot phase estimation.
-			The magnitude and the phase
-			of the 19th-direction (without motion) and the 5th-direction (with motion)
-			DWIs are displayed.}
-		\label{FIG:MOTION_RETRO_AXIAL}
-	\end{figure*}
-
-	\cref{FIG:MOTION_RETRO_AXIAL} demonstrates
+	
+	\cref{FIG:MOTION_RETRO_TRA} demonstrates
 	the efficacy of the self-gated ZSSSL reconstruction
-	by comparing to the standard navigated LLR regularized reconstruction
-	using the NAViEPI data from Protocol \#3 in \cref{TAB:ACQ}.
-	The 19th diffusion-encoding (without inter-shot motion)
-	and the 5th diffusion-encoding (with accidental inter-shot motion)
+	by comparing to the navigated reconstructions
+	using the NAViEPI data of the first volunteer 
+	from Protocol \#1 in \cref{TAB:ACQ}.
+	The diffusion encoding with accidental inter-shot motion
 	reconstruction results were displayed.
-
-	The selected DWIs showed residual aliasing-like and severe motion-blurring artifacts
-	in the navigated LLR reconstruction.
-	The main reason of these artifacts is that the addition of navigator acquisition
+	
+	The selected DWIs showed residual aliasing-like and 
+	severe motion-blurring artifacts
+	in the navigated reconstructions.
+	The main reason of these artifacts is that 
+	the addition of navigator acquisition
 	increased the total scan time,
 	resulting in higher sensitivity to accidental inter-shot motion.
 	Admittedly, navigators are valuable in the case of ultra high resolution
@@ -879,68 +800,189 @@
 	for the in-plane resolution of 0.5~mm \cite{tan_2024_naviepi}.
 	In this experiment, however, the utilization of 3 shots yielded
 	$6 \times 2$-fold acceleration per shot (refer to Protocol \#3).
-	Such an acceleration rate proved achievable for the self-gated approach,
-	as demonstrated in the self-gated ZSSSL reconstruction results.
+	Such an acceleration rate proved achievable in the self-gated approach,
+	as demonstrated in the self-gated reconstruction results.
 	The self-gated ZSSSL reconstruction largely reduced the residual aliasing
-	and motion artifact. The phases of the reconstructed DWIs from self-gated ZSSSL
-	were much less and more flattened than those from navigated LLR.
-	This is because of the echo time difference between the imaging and the navigator echoes.
-
-
+	and motion artifact. 
+	Further, self-gated ZSSSL exhibits much clearer tissue delineation 
+	in reconstructed DWIs, as indicated by red arrows in the zoomed-in views
+	in \cref{FIG:MOTION_RETRO_TRA}, 
+	whereas self-gated LLR suffers from 
+	blurry tissue boundaries and signal dropouts.
+	
 	\begin{figure*}
 		\begin{minipage}[c]{0.75\textwidth}
-			\includegraphics[width=\textwidth]{../figures/fig6.png}
+			\includegraphics[width=\textwidth]{../figures/fig3.png}
 		\end{minipage}\hfill
 		\begin{minipage}[c]{0.23\textwidth}
-			\caption{\SI{0.7}{\milli\meter} isotropic resolution DWI
-			of the 11th diffusion encoding (with motion)
-			in (top) the coronal and (bottom) the sagittal orientation, respectively.
-			Displayed results are (left) the navigated LLR regularized
-			and (right) the self-gated ZSSSL reconstruction.}
+			\caption{Single-direction DWI at 0.7~mm isotropic resolution 
+				as reconstructed by retrospectively self-gated 
+				(left) LLR and (right) ZSSSL 
+				in (top) the coronal and (bottom) the sagittal views. 
+				The same diffusion direction as in \cref{FIG:MOTION_RETRO_TRA}
+				is chosen for display. 
+				ZSSSL reduces phase ambiguities in the shot-combined reconstruction
+				, thereby rendering clearer tissue delineation and 
+				reduced stripping artifacts (as indicated by the red arrows).}
 			\label{FIG:MOTION_RETRO_2}
 		\end{minipage}
 	\end{figure*}
-
+	
 	\cref{FIG:MOTION_RETRO_2} shows diffusion-weighted images
-	at the 11th diffusion encoding (with motion)
+	at the same diffusion encoding as in \cref{FIG:MOTION_RETRO_TRA}
 	in the coronal and the sagittal view, respectively.
 	As mentioned in \cref{SEC:ZSSSL_GEN}, ZSSSL was trained using only one slice
 	and then inferred on the remaining slices.
 	The ZSSSL model generalized well across slices.
-	More importantly, navigated LLR reconstruction suffered from motion-induced
-	stripping artifacts in both coronal and sagittal views \cite{chang_2021_musium},
-	whereas the self-gated ZSSSL approach substantially removed such artifacts
-	and supplies high-quality DWI without the need of navigator.
-
-
+	The inference of every slice took only about 1~minute, 
+	whereas the LLR reconstruction took about 48~minutes per slice.
+	More importantly, the self-gated LLR reconstruction exhibited residual 
+	motion-induced stripping artifacts 
+	in both coronal and sagittal views \cite{chang_2021_musium},
+	whereas the self-gated ZSSSL approach substantially removed these artifacts
+	and supplied high-quality DWI without the need of navigators.
+	
 	\subsection{Prospectively Self-Gated ZSSSL}
-
+	
+	\begin{figure*}
+		\centering
+		\includegraphics[width=\textwidth]{../figures/fig4.png}
+		\caption{0.7~mm isotropic mesoscale DWI with 21 volumes at about 10~minutes 
+			without the acquisition of navigators. 
+			(A) Single-direction DWI and 
+			(B) Mean DWI of 20 diffusion directions 
+			at three orthogonal orientations are displayed.
+			DWIs were reconstructed by 
+			(top) MUSE, (middle) LLR, and (bottom) ZSSSL.
+			MUSE suffers from severe noise artifacts at such small voxel size.
+			LLR is able to clean up most of the noise, 
+			but is still hampered by signal void artifacts in the axial view, 
+			which appears as stripping artifacts in coronal and sagittal views 
+			(as indicated by red arrows).
+			ZSSSL significantly reduces both noise and signal voids.
+			In the mean DWI images, LLR shows amplified noise 
+			in the cerebellum region, 
+			whereas ZSSSL yields more homogeneous signal distributions.}
+		\label{FIG:MOTION_PROS}
+	\end{figure*}
+	
+	\cref{FIG:MOTION_PROS} compares the reconstruction results
+	using the prospectively acquired iEPI data without navigators 
+	of the second volunteer 
+	(refer to Protocol \#2 in \cref{TAB:ACQ}).
+	The snapshot single diffusion-direction DWIs 
+	as well as mean DWIs 
+	at three orthogonal planes were displayed.
+	The MUSE reconstruction suffered from strong noise 
+	at such high spatial resolution.
+	
+	The LLR regularized reconstruction largely reduced noise,
+	but still exhibited signal void in the axial view, 
+	which appeared as striping artifacts in the coronal and sagittal views 
+	(refer to the red arrows in \cref{FIG:MOTION_PROS}).
+	These artifacts can be reduced by incorporating adaptive noise estimation 
+	in LLR regularization \cite{cordero_2019_cplxdwi}. 
+	On the other hand, the LLR regularized reconstruction 
+	showed residual noise in the cerebellum region
+	(refer to the blue arrows in \cref{FIG:MOTION_PROS}), 
+	which could be caused by the $B_1$ excitation field inhomogeneity 
+	at \SI{7}{\tesla}. 
+	
+	The above-mentioned artifacts were nearly gone in the ZSSSL reconstruction.
+	The DWI in the axial view showed clearer diffusion contrasts 
+	and thus better tissue delineation in the coronal and sagittal views. 
+	Plus, the DWI in the sagittal view showed more homogeneous 
+	signal distribution.
+	
 	\begin{figure}
 		\centering
-		\includegraphics[width=\columnwidth]{../figures/fig7.png}
-		\caption{\SI{0.7}{\milli\meter} isotropic resolution DWI
-			of the 15th diffusion encoding 
-			without the acquisition of navigator.
-			The snapshots in the axial, the coronal and the sagittal views
-			were reconstructed by \textbf{(A)} self-gated MUSE,
-			\textbf{(B)} self-gated LLR, and
-			\textbf{(C)} self-gated ZSSSL, respectively.}
-		\label{FIG:MOTION_PROS}
+		\includegraphics[width=\columnwidth]{../figures/fig5.png}
+		\caption{Convergence analysis along the ADMM unrolling training 
+			and validation epochs
+			for the ZSSSL results in \cref{FIG:MOTION_PROS}.
+			Displayed curves are (red solid) the training loss,
+			(red dashed) the validation loss,
+			and (blue solid) the learned regularization strength $\lambda$, respectively.}
+		\label{FIG:CONVERGENCE}
 	\end{figure}
+	
+	\cref{FIG:CONVERGENCE} displays the training and validation loss
+	as well as the learned regularization strength along epochs.
+	It can be seen that 100 epochs were sufficient for
+	the convergence of ADMM unrolling.
+	In addition, the regularization strength converged 
+	to the value of about 0.027.
 
-	\cref{FIG:MOTION_PROS} compares the reconstruction results
-	using the prospectively acquired iEPI data without navigator
-	(refer to Protocol \#4 in \cref{TAB:ACQ}).
-	The snapshot single diffusion-direction DWIs at three orthogonal planes were displayed.
-	The MUSE reconstruction suffered from strong noise at such high spatial resolution.
-	The LLR regularized reconstruction largely reduced noise,
-	but suffered from spatial blurring and signal dropout,
-	as indicated by red arrows in \cref{FIG:MOTION_PROS}.
-	Moreover, even though navigator was not acquired in this experiment,
-	the self-gated LLR approach still showed residual stripping artifacts
-	in the coronal and the sagittal views, as indicated by blue arrows.
-	in contrast, the proposed self-gated ZSSSL approach significantly
-	reduced motion-induced spatial blurring and regained sharp diffusion-weighted contrasts.
+
+	\begin{figure*}
+		\includegraphics[width=\textwidth]{../figures/fig6.png}
+		\caption{Prospectively self-gated DWI reconstruction results 
+			at 0.7~mm isotropic resolution. Displayed images are 
+			one axial slice at four different diffusion-encoding directions.
+			ZSSSL enables much cleaner delineations of diffusion contrasts 
+			than LLR.}
+		\label{FIG:SG_ZSSSL_VOL3}
+	\end{figure*}
+	
+	\cref{FIG:SG_ZSSSL_VOL3} showed the reconstructed DWIs 
+	at four diffusion encodings based on the iEPI data 
+	acquired from the third volunteer. 
+	In this experiment, the volunteer was instructed 
+	to keep still during scan.
+	Again, the proposed ZSSSL reconstruction 
+	with spatial-diffusion convolution illustrated 
+	superior tissue structure delineation 
+	to the LLR regularized reconstruction.
+
+%	\cref{FIG:MOTION_RETRO_TRA} displays the regularized reconstruction results
+%	using both the 4-shot fully-sampled iEPI data and
+%	the retrospectively 2-shot undersampled iEPI data.
+%	Firstly, compared to MUSE, all other regularized joint reconstructions 
+%	(LLR and ZSSSL)
+%	demonstrated denoising capabilities in the case of 4-shot fully-sampled iEPI.
+%	Secondly, when the 4-shot iEPI data was retrospectively undersampled to 2 shots,
+%	the undersampling factor became $4 \times 3$
+%	(4-fold in-plane undersampling and 3-fold slice undersampling).
+%	As expected, the MUSE reconstruction showed increased noise.
+%	In contrast, both LLR and ZSSSL reconstructions 
+%	showed strong denoising performance.
+%	ZSSSL, in particular, provided sharper and clearer delineation
+%	of brain tissues compared to LLR.
+%	This may attribute to the fact that the same LLR regularization strength was used
+%	for both the 4-shot and the 2-shot reconstructions.
+%	While this empirically chosen regularization strength 
+%	was optimal for the 4-shot data,
+%	it resulted in slightly blurring artifacts for the 2-shot data.
+%	ZSSSL, on the contrary, learned the regularization strength
+%	($\lambda$ in \cref{EQU:INV}) during training,
+%	eliminating the need for empirical selection.
+%	Moreover, note that the LLR reconstruction took about 40 minutes for the data,
+%	whereas the training of ZSSSL required about 3 hours,
+%	with inference taking only 1 minute.
+
+
+	\subsection{DWI at $b$-Value of $3000$~\si{s/mm^2}}
+
+	\begin{figure*}
+		\includegraphics[width=\textwidth]{../figures/fig7.png}
+		\caption{Reconstruction results of 3-shell \SI{1.0}{mm} isotropic resolution
+			DWI with $3 \times 3$ acceleration: (left) LLR and (right) ZSSSL.
+			(Top) Single-direction DWI at the $b$-values of
+			\SI{3000}{s/mm^2} and 
+			(bottom) colored fractional anisotropy maps.}
+		\label{FIG:B3000}
+	\end{figure*}
+
+	\cref{FIG:B3000} \hl{compares} the LLR and ZSSSL reconstruction results
+	of the 3-shell \SI{1.0}{mm} isotropic resolution DWI,
+	as acquired by Protocol \#3 in \cref{TAB:ACQ}.
+	In the single-direction DWI at the $b$-value of \SI{3000}{s/mm^2}, 
+	the proposed self-gated ZSSSL 
+	showed slight improvement in SNR and structural sharpness 
+	compared to LLR. The colored fractional anisotropy maps, 
+	as obtained via diffusion tensor model fitting over DWIs in 126 directions, 
+	showed similar quality between LLR and ZSSSL.
+	
 
 
 	% ============================== %
