--- a/origin/manuscripts/tmi.tex
+++ b/origin/manuscripts/tmi.tex
@@ -216,7 +216,7 @@
 
 	\subsubsection*{Contributions}
 	\begin{itemize}
-		\item We unroll ADMM to perform zero-shot self-supervised learning 
+		\item We unroll ADMM to perform scan-specific self-supervised learning 
 		and incorporate self-gated shot-to-shot phase variation estimation 
 		into the data-consistency term for deep diffusion-weighted imaging reconstruction.
 		\item We demonstrate that the trained ADMM unrolling model from one single slice 
