submmision to MRM

--- a/mrm/MRM-AMA.bib
+++ b/mrm/MRM-AMA.bib
@@ -2083,7 +2083,7 @@
 	Volume                   = {21}
 }
 
-@Article{dai_2023_epti-diff,
+@Article{dai_2022_epti-diff,
 	Title                    = {{Distortion-free diffusion imaging using self-navigated Cartesian echo-planar time resolved acquisition and joint magnitude and phase constrained reconstruction}},
 	Author                   = {Dai, Erpeng and Lee, Philip K and Dong, Zijing and Fu, Fanrui and Setsompop, Kawin and McNab, Jennifer A},
 	Journal                  = {IEEE Trans Med Imaging},
@@ -2161,6 +2161,15 @@
 	doi                      = {10.1002/mrm.29468}
 }
 
+@InProceedings{cho_2023_deepslr,
+	Title                    = {{Improved Multi-shot Diffusion-Weighted MRI with Zero-Shot Self-supervised Learning Reconstruction}},
+	Author                   = {Cho, Jaejin and Jun, Yohan and Wang, Xiaoqing and Kobayshi, Caique and Bilgic, Berkin},
+	Booktitleaddon           = {26th International Conference on Medical Image Computing and Computer-Assisted Intervention (MICCAI'26)},
+	Year                     = {2023},
+	Pages                    = {457-466},
+	doi                      = {10.1007/978-3-031-43907-0_44}
+}
+
 @Article{dai_2023_julep,
 	Title                    = {{Multi-band multi-shot diffusion MRI reconstruction with joint usage of structured low-rank constraints and explicit phase mapping}},
 	Author                   = {Dai, Erpeng and Mani, Merry and McNab, Jennifer A},
@@ -2201,6 +2210,16 @@
 	doi                      = {10.1109/TMI.2022.3228075}
 }
 
+@Article{tian_2023_sdndti,
+	Title                    = {{SDnDTI: Self-supervised deep learning-based denoising for diffusion tensor MRI}},
+	Author                   = {Tian, Qiyuan and Li, Ziyu and Fan, Qiuyun and Polimeni, Jonathan R and Bilgic, Berkin and Salat, David H and Huang, Susie Y},
+	Journal                  = {NeuroImage},
+	Year                     = {2023},
+	Pages                    = {119033},
+	Volume                   = {253},
+	doi                      = {10.1016/j.neuroimage.2022.119033}
+}
+
 @Article{heydari_2024_jmaple,
 	Title                    = {{Joint MAPLE: Accelerated joint $T_1$ and $T_2^*$ mapping with scan-specific self-supervised networks}},
 	Author                   = {Heydari, Amir and Ahmadi, Abbas and Kim, Tae Hyung and Bilgic, Berkin},
@@ -2239,4 +2258,14 @@
 	Pages                    = {},
 	Volume                   = {},
 	doi                      = {10.1002/mrm.30351}
+}
+
+@Article{dong_2024_romer-epti,
+	Title                    = {{Romer-EPTI: Rotating-view motion-robust super-resolution EPTI for SNR-efficient distortion-free in-vivo mesoscale diffusion MRI and microstructure imaging}},
+	Author                   = {Dong, Zijing and Reese, Timothy G and Lee, Hong-Hsi and Huang, Susie Y and Polimeni, Jonathan R and Wald, Lawrence L and Wang, Fuyixue},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2024},
+	Pages                    = {},
+	Volume                   = {},
+	doi                      = {10.1002/mrm.30365}
 }
