--- a/mrm/MRM-AMA.tex
+++ b/mrm/MRM-AMA.tex
@@ -868,6 +868,7 @@ NHR is funded by federal and Bavarian state authorities.
 NHR@FAU hardware is partially funded by
 DFG under project 440719683. 
 The authors are thankful to Dr.~Vikas Gulani for insightful discussions.
+The authors thank ChatGPT for the revision of the Introduction section.
 
 % ========================================================= %
 \section*{Data Availability Statement}
